got the order page to get request

--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,12 @@ table {
 .tableHeader {
   font-weight: bold;
 }
+
+.order__info {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.order__cart {
+  background-color: white;
+}
