wired up redux thunk

--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,7 @@ table {
   border: none;
   background-color: purple;
   color: white;
-  font-weight: 500;
+  font-weight: bold;
   font-size: 1.1rem;
   padding: 1rem 1.5rem;
   margin-top: 1rem;
