--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,7 @@ select {
 
 .login-form {
   margin: 20vh auto;
-  box-shadow: 0 4px 6px rgba(black, 0.2);
+  box-shadow: 0 2px 4px rgba(12, 12, 12, 0.2);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -107,7 +107,7 @@ select {
 
 input {
   display: block;
-  border: 2px solid rgb(92, 92, 92);
+  border: 2px solid rgb(124, 124, 124);
   background-color: white;
   padding: 1rem 1.5rem;
   font-size: 1.2rem;
