--- a/src/css/base.css
+++ b/src/css/base.css
@@ -12,13 +12,15 @@ html {
 }
 
 body {
-  background-color: #eee;
+  background-color: rgb(255, 255, 255);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1rem;
   font-weight: 400;
-  line-height: 1.6;
+  line-height: 1.5;
   color: #333;
+  padding: 0;
+  margin: 0;
 }
 
 a {
@@ -28,4 +30,15 @@ a {
 
 li {
   list-style: none;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  text-align: left;
+}
+
+img {
+  width: 100%;
+  max-height: 100%;
 }
