about to move orders to container

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,7 @@
+@import "variables.css";
 @import "base.css";
 @import "ui.css";
-@import "variables.css";
+@import "layout.css";
 @import "sidebar.css";
 @import "login.css";
 @import "topbar.css";
