--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -34,13 +34,32 @@
 .sidebar__list-link {
   display: block;
   line-height: 3.5rem;
-  padding-left: 4rem;
+  padding-left: 4.5rem;
 }
+
+.sidebar__order-form-list-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1.5rem;
+}
+
+.sidebar__order-form-link {
+  background-color: var(--button-color-secondary);
+  color: white;
+  line-height: 3rem;
+  font-weight: 500;
+  width: 200px;
+  text-align: center;
+  border-radius: 3px;
+  padding: 0;
+}
+
 .active {
   color: var(--active-link-color);
   border-left: 8px solid var(--active-link-color);
   background-color: var(--main-hover-color);
-  padding-left: 56px;
+  padding-left: 64px;
 }
 
 @media (max-width: 1000px) {
