--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,26 +1,39 @@
-*,
-::before,
-::after {
-  box-sizing: inherit;
-  margin: 0;
-  padding: 0;
-}
-
 html {
   box-sizing: border-box;
-  font-size: 100%;
+  font-size: 16px;
 }
 
-body {
-  background-color: rgb(255, 255, 255);
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #333;
-  padding: 0;
-  margin: 0;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 a {
@@ -28,17 +41,8 @@ a {
   color: inherit;
 }
 
-li {
-  list-style: none;
-}
-
 table {
-  width: 100%;
   border-collapse: collapse;
   text-align: left;
-}
-
-img {
   width: 100%;
-  max-height: 100%;
 }
