--- a/src/css/order.css
+++ b/src/css/order.css
@@ -8,9 +8,6 @@
 
 .order__title {
   text-align: center;
-  width: 40%;
-  margin-left: auto;
-  margin-right: auto;
   font-size: 1.2rem;
   font-weight: 500;
 }
@@ -18,6 +15,7 @@
 .order__info {
   display: flex;
   justify-content: space-evenly;
+  overflow-x: auto;
 }
 
 .order__edits {
@@ -61,6 +59,6 @@
   .order__changestatus {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 85%;
   }
 }
