--- a/src/css/base.css
+++ b/src/css/base.css
@@ -24,6 +24,7 @@ ul {
   font-weight: normal;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: rgb(85, 85, 85);
 }
 
 ol,
