--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -3,6 +3,11 @@
   display: flex;
   flex-direction: column;
   box-shadow: var(--box-shadow-card);
+  z-index: 5;
+}
+
+.sidebar svg {
+  margin-right: 0.5rem;
 }
 
 .sidebar__logo {
@@ -11,7 +16,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 4px;
-  padding: 0.9rem;
+  padding: 0 3rem;
 }
 
 .user-signed-in {
@@ -34,7 +39,7 @@
 .sidebar__list-link {
   display: block;
   line-height: 3.5rem;
-  padding-left: 4.5rem;
+  padding-left: 3.5rem;
 }
 
 .sidebar__order-form-list-item {
@@ -59,7 +64,7 @@
   color: var(--active-link-color);
   border-left: 8px solid var(--active-link-color);
   background-color: var(--main-hover-color);
-  padding-left: 64px;
+  padding-left: 48px;
 }
 
 .sidebar__logout {
