--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -8,5 +8,5 @@
   /* --box-shadow-card: 0px 2px 6px 0px rgba(0, 0, 0, 0.18); */
   --active-link-color: rgb(36, 137, 184);
   --main-color: #1d7a8c;
-  --topbar-color: linear-gradient(120deg, #62f5ff, #4392db);
+  --topbar-color: linear-gradient(120deg, #00e4d0, #5983e8);
 }
