--- a/src/css/orderForm.css
+++ b/src/css/orderForm.css
@@ -5,7 +5,7 @@
 @media (max-width: 1000px) {
   .order-form {
     display: flex;
-    padding: 4rem 0;
+    padding: 4rem 0 1.8rem 0;
     flex-direction: column;
     justify-content: center;
     align-items: center;
