--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -40,6 +40,7 @@
   display: block;
   line-height: 3.5rem;
   padding-left: 3.5rem;
+  color: rgb(139, 139, 139);
 }
 
 .sidebar__order-form-list-item {
