--- a/src/scss/Login.module.scss
+++ b/src/scss/Login.module.scss
@@ -1,5 +1,7 @@
-.login-form {
-  box-shadow: var(--box-shadow-card);
+@import "../scss/variables.scss";
+
+.form {
+  // box-shadow: $box-shadow-card;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,8 +10,8 @@
   background-color: white;
 }
 
-.login {
-  background-color: var(--main-bg-color);
+.main {
+  background-color: $main-bg-color;
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -18,7 +20,7 @@
 }
 
 @media (max-width: 1000px) {
-  .login-form {
+  .form {
     width: 80%;
     padding: 1.8rem;
     justify-content: center;
