--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -7,7 +7,7 @@
 .main {
   padding: 5.8rem 1.8rem;
   min-height: 100vh;
-  background-color: var(--main-bg-color);
+  background-color: $main-bg-color;
   max-width: 100%;
 }
 
