--- a/src/scss/topbar.scss
+++ b/src/scss/topbar.scss
@@ -6,7 +6,7 @@
   justify-content: flex-end;
   align-items: center;
   height: 4rem;
-  background-image: var(--topbar-color);
+  background-image: $topbar-color;
   width: 100%;
 }
 
