--- a/src/scss/Order.module.scss
+++ b/src/scss/Order.module.scss
@@ -1,62 +1,58 @@
-.order-row {
-  cursor: pointer;
-}
+@import "./variables.scss";
+@import "./ui.scss";
 
-.order-row:hover {
-  background-color: $main-hover-color;
-}
-
-.order__title {
+.title {
   text-align: center;
   font-size: 1.2rem;
   font-weight: 500;
 }
 
-.order__info {
+.info {
+  @extend .card;
   display: flex;
   justify-content: space-evenly;
   overflow-x: auto;
 }
 
-.order__edits {
+.edits {
   display: flex;
   justify-content: space-evenly;
   align-items: flex-end;
 }
 
-.order__addcomment,
-.order__changestatus {
+.addcomment,
+.changestatus {
   display: flex;
   flex-direction: column;
   width: 45%;
 }
 
-.order__admin-comments-cell {
+.adminComment {
   width: 65%;
 }
 
-.order__admin-timestamp-cell {
+.adminTimestamp {
   width: 20%;
 }
 
-.order__admin-user-cell {
+.adminUser {
   width: 15%;
 }
 
 @media (max-width: 1000px) {
-  .order__info {
+  .info {
     flex-direction: column;
     justify-content: flex-start;
   }
 
-  .order__edits {
+  .edits {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
   }
 
-  .order__addcomment,
-  .order__changestatus {
+  .addcomment,
+  .changestatus {
     display: flex;
     flex-direction: column;
     width: 85%;
