refactored orders and special orders

--- a/src/containers/Order/Order.module.scss
+++ b/src/containers/Order/Order.module.scss
@@ -1,7 +1,7 @@
-@import "./variables.scss";
-@import "./ui.scss";
+@import "../../scss/index.scss";
 
 .title {
+  @extend .card;
   text-align: center;
   font-size: 1.2rem;
   font-weight: 500;
