goi to add apollo

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -8,6 +8,7 @@ $form-element-border: rgb(182, 179, 179);
 $active-link-color: rgb(36, 137, 184);
 $main-color: #1d7a8c;
 $topbar-color: linear-gradient(120deg, #00e4d0, #5983e8);
+$skeleton-color: #f3f3f3;
 
 $test-color: var(--test-color);
 
