--- a/src/containers/SignIn/SignIn.module.scss
+++ b/src/containers/SignIn/SignIn.module.scss
@@ -19,6 +19,14 @@
   align-items: center;
 }
 
+.errorMessage {
+  color: rgb(136, 14, 14);
+  width: 100%;
+  height: 1rem;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
 @media (max-width: 1000px) {
   .form {
     width: 80%;
