--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -44,7 +44,7 @@ textarea,
 select,
 input {
   width: 100%;
-  margin-bottom: 1.5rem;
+  margin-bottom: .5rem;
 }
 
 select {
@@ -58,7 +58,6 @@ input {
   padding: 1rem 1.5rem;
   font-size: 1rem;
   font-family: inherit;
-  margin-bottom: 2rem;
 }
 
 input::placeholder {
