--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -22,7 +22,7 @@ ul {
   margin: 0;
   padding: 0;
   font-weight: normal;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  font-family: "Open Sans", "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: rgb(85, 85, 85);
 }
