--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -47,3 +47,14 @@ table {
   text-align: left;
   width: 100%;
 }
+
+
+fieldset {
+  border: none;
+  width: 100%;
+  padding: 0;
+}
+
+form {
+  width: 100%;
+}
