--- a/src/pages/SignIn/SignIn.module.scss
+++ b/src/pages/SignIn/SignIn.module.scss
@@ -1,29 +1,40 @@
 @import "../../scss/variables.scss";
 
-.form {
+.formWrap {
   // box-shadow: $box-shadow-card;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 4rem;
-  width: 400px;
+  padding: 1rem;
+  width: 450px;
   background-color: white;
+  border-radius: $border-radius;
 }
 
-.main {
-  background-color: $main-bg-color;
-  height: 100vh;
-  width: 100vw;
+.logo {
+  width: 80%;
+}
+
+.container {
+  background: $topbar-color;
+  height: 100%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 1rem;
+  min-height: 100vh;
 }
 
+.title {
+  font-size: 2rem;
+  text-align: center;
+  font-weight: bold;
+  padding: 1rem 0;
+}
 
-@media (max-width: 1000px) {
-  .form {
-    width: 80%;
-    padding: 1.8rem;
-    justify-content: center;
+@media (min-width: 480px) {
+  .formWrap {
+    padding: 3rem;
   }
 }
