--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -30,11 +30,11 @@ button {
   color: white;
   font-weight: bold;
   font-size: 1.1rem;
-  padding: 1rem 1.5rem;
+  padding: 1.1rem 1.5rem;
   cursor: pointer;
   width: 100%;
   border-radius: 2px;
-  margin-bottom: 1.5rem;
+  margin: 2rem 0;
 }
 button:hover {
   background-color: $button-hover;
@@ -44,7 +44,7 @@ textarea,
 select,
 input {
   width: 100%;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 select {
@@ -53,7 +53,7 @@ select {
 
 input {
   display: block;
-  border: 1px solid $form-element-border;
+  border: 1px solid gray;
   background-color: white;
   padding: 1rem 1.5rem;
   font-size: 1rem;
