--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -9,6 +9,7 @@ $active-link-color: rgb(36, 137, 184);
 $main-color: #1d7a8c;
 $topbar-color: linear-gradient(120deg, #00e4d0, #5983e8);
 $skeleton-color: #f3f3f3;
+$border-radius: 3px;
 
 $test-color: var(--test-color);
 
