going to add query to the differnt lists

--- a/src/components/Topbar/Topbar.module.scss
+++ b/src/components/Topbar/Topbar.module.scss
@@ -47,11 +47,11 @@
   margin-left: 0.5rem;
 }
 
-.logOut:hover {
+.signOut:hover {
   color: lightblue;
 }
 
-.logOut a {
+.signOut a {
   line-height: 64px;
 }
 
@@ -59,7 +59,7 @@
   .list {
     width: 55%;
   }
-  .logOut {
+  .signOut {
     display: none;
   }
 
