--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -1,13 +1,3 @@
-.card {
-  background-color: white;
-  padding: 1.8rem;
-  margin-bottom: 1.8rem;
-  border-radius: 2px;
-  // box-shadow: $box-shadow-card;
-  display: block;
-  overflow-x: auto;
-}
-
 .table-wrap {
   overflow-x: auto;
 }
@@ -22,22 +12,6 @@ td {
 
 tr:nth-child(even) {
   background-color: $main-bg-color;
-}
-
-button {
-  border: none;
-  background-color: $button-color;
-  color: white;
-  font-weight: bold;
-  font-size: 1.1rem;
-  padding: 1.1rem 1.5rem;
-  cursor: pointer;
-  width: 100%;
-  border-radius: 2px;
-  margin: 2rem 0;
-}
-button:hover {
-  background-color: $button-hover;
 }
 
 textarea,
@@ -58,21 +32,8 @@ input {
   padding: 1rem 1.5rem;
   font-size: 1rem;
   font-family: inherit;
-}
-
-input::placeholder {
-  color: $form-element-border;
-  opacity: 1;
-}
-
-.spinner {
-  position: absolute;
-
-  z-index: 50;
-  left: 50%;
-  margin-left: -50px;
-  top: 50%;
-  margin-top: -50px;
+  width: 100%;
+  margin-bottom: 0.5rem;
 }
 
 .order-row {
@@ -87,10 +48,8 @@ input::placeholder {
   .main {
     font-size: 0.9rem;
   }
-  .card {
-    border-top: 8px solid rgb(247, 247, 248);
-  }
-  .App {
+
+  .layout {
     grid-template-columns: 1fr;
     grid-template-rows: 60px 1fr;
   }
