--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -28,7 +28,7 @@
   width: 100%;
 
   :hover {
-    background-color: $main-hover-color;
+    background-color: blue;
   }
 }
 
@@ -51,8 +51,8 @@
 }
 
 .orderFormLink {
-  border: 4px solid $button-color-secondary;
-  color: darken($button-color-secondary, 10%);
+  border: 4px solid red;
+  color: blue;
   line-height: 3rem;
   font-weight: 500;
   width: 200px;
@@ -61,14 +61,14 @@
   padding: 0;
 
   :hover {
-    background-color: $active-link-color;
+    background-color: red;
   }
 }
 
 .active {
-  color: $active-link-color;
-  border-left: 8px solid $active-link-color;
-  background-color: $main-hover-color;
+  color: red;
+  border-left: 8px solid red;
+  background-color: blue;
   padding-left: 48px;
 }
 
