--- a/src/components/Topbar/Topbar.module.scss
+++ b/src/components/Topbar/Topbar.module.scss
@@ -1,5 +1,3 @@
-@import "../../scss/index.scss";
-
 .topbar {
   position: fixed;
   top: 0;
@@ -8,7 +6,7 @@
   justify-content: flex-end;
   align-items: center;
   height: 4rem;
-  background-image: $topbar-color;
+  background-image: green;
   width: 100%;
 }
 
